new et show de booking

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,4 +1,4 @@
-<h2 class = "text-center fw-1 fs-1 m-5"> Booking </h2>
+<h2 class = "text-center fw-1 fs-1 m-5">Welcome ! Time To Book Your Mission </h2>
 
           <%= simple_form_for [@mission, @booking] do |f| %>
             <%= f.input :start_date, as: :date, input_html: {class: "datepicker"}%>
