--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,14 +1,19 @@
 
-                   
+
                     <div class="card-block px-2">
                       <h4 class="card-title mt-3"><%= @mission.title %></h4>
-                      <p class="card-text"><%= @mission.description %></p>
-                      <p class="card-text"><%= @mission.duration %></p>
+                      <p class="card-text"> What's your mission ?<%= @mission.description %></p>
+                      <p class="card-text">Your dress code<%= @mission.dess_code %></p>
+                      <p class="card-text"><%= @mission.duration %>hours</p>
+
                       <p><% if current_user == @mission.user  %>
-                        <%= link_to "Delete", mission_path(@bunker), data: {turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "btn btn-danger" %>
-                        <%# <% if policy(@bunker).edit? %>
-                        <%= link_to "Edit your offer", edit_bunker_path(@mission.id), class: "btn btn-primary" %>
-                        <%# <% end %>
-                        <%= link_to "Dashboard", profil_path, data: {turbo_method: :get}, class: "btn btn-secondary" %>
-                        <%# <%= link_to custom_url(:bunker_id => @bunker.id), class: "course-btn" do %>
+                        <%= link_to "Delete your current mission", mission_path(@mission), data: {turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "btn btn-danger" %>
+
+                        <%= link_to "Edit your offer", edit_mission_path(@mission.id), class: "btn btn-primary" %>
+
+                        <%# ajouter le lien de HOME ds la navbar %>
+
+                        <%# <%= link_to "Dashboard", profil_path, data: {turbo_method: :get}, class: "btn btn-secondary" %>
+
+                        <%# <%= link_to custom_url(:mission_id => @mission.id), class: "course-btn" do %>
                       <% end %>
