--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Missions</h1>
-
+<strong><p> Hello to all concerned and conscious people !</p> </strong>
 <%= link_to "New mission", new_mission_path %>
