--- a/app/views/missions/new.html.erb
+++ b/app/views/missions/new.html.erb
@@ -8,11 +8,13 @@
           <form action="#" method="post">
             <input class="text" <% form.text_field :title %> <% form.label :title %> placeholder="Title" required="true">
             <input class="text"  <% form.text_area :description %> <% form.label :description %> placeholder="Description" required="true">
+            <input class="text" type="file" <% form.file_field :photo %> <% form.label :photo %> placeholder="Picture" >
             <input class="text" type="date" <% form.date_field :start_date %>  <% form.label :start_date %> placeholder="Start date" required="true">
             <input class="text" type="date" <% form.date_field :end_date %> <% form.label :end_date %> placeholder="End date" required="true">
             <input class="text" <% form.text_field :location %> <% form.label :location %> placeholder="Location" required="true">
             <input class="text" type="number" <% form.number_field :reward %> <% form.label :reward %> placeholder="Reward" required="true">
             <br>
+
             <div class="wthree-text">
               <label class="anim">
                 <input type="checkbox" class="checkbox" required="">
