--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 
   <body><%= render "shared/navbar" %>
     <%= render "shared/flashes" %>
-
     <%= yield %>
+    <%= render "shared/footer" %>
   </body>
 </html>
