--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,8 +1,8 @@
 <h2 class = "text-center fw-1 fs-1 m-5">Welcome ! Time To Book Your Mission </h2>
 
           <%= simple_form_for [@mission, @booking] do |f| %>
-            <%= f.input :start_date, as: :date, input_html: {class: "datepicker"}%>
-            <%= f.input :end_date, as: :date, input_html: {class: "datepicker"}%>
+            <%= f.date_field :start_date %>
+            <%= f.date_field :end_date%>
 
                 <div class="form-actions text-center">
                   <%= f.submit "Submit booking ", class: "btn btn primary" %>
