--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -6,15 +6,15 @@
 
 <% @missions.each do |mission| %>
   <div class="mission">
-    <% if mission.photo_url.present? %>
+    <% if mission.photo.attached? %>
       <%= image_tag mission.photo_url, class: "mission-image" %>
     <% end %>
     <h3><%= mission.title %></h3>
     <p><%= mission.description %></p>
     <p><strong>Location:</strong> <%= mission.location %></p>
-    <p><strong>Date:</strong> <%= mission.start_date.strftime('%d/%m/%Y') %> - <%= mission.end_date.strftime('%d/%m/%Y') %></p>
-    <p><strong>Time:</strong> <%= Time.new(2000, 1, 1, rand(24), [0, 15, 30, 45].sample).strftime('%H:%M') %></p>
-    <p><strong>Duration:</strong> <%= rand(1..5) %> hours</p>
+    <p><strong>Date:</strong> <%= mission.start_date %> - <%= mission.end_date %></p>
+    <p><strong>Time:</strong> <%= mission.start_time %> </p>
+    <p><strong>Duration:</strong> <%= mission.duration %></p>
     <p><strong>Dess code:</strong> <%= mission.dess_code %></p>
     <p><strong>Reward:</strong> <%= mission.reward %> points</p>
     <p><strong>Rating:</strong> <%= mission.rating %></p>
