--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -6,9 +6,9 @@
 
 <% @missions.each do |mission| %>
   <div class="mission">
-    <% if mission.photo.attached? %>
-      <%= image_tag mission.photo_url, class: "mission-image" %>
-    <% end %>
+
+    <%= mission.photo_url%>
+
     <h3><%= mission.title %></h3>
     <p><%= mission.description %></p>
     <p><strong>Location:</strong> <%= mission.location %></p>
@@ -17,7 +17,7 @@
     <% end_date = [start_date + rand(4), Date.today + 30].min %>
     <p><strong>Date:</strong> <%= start_date.strftime('%d/%m/%Y') %> - <%= end_date.strftime('%d/%m/%Y') %></p>
     <p><strong>Time:</strong> <%= Time.new(2000, 1, 1, rand(5..21), [0, 15, 30, 45].sample).strftime('%H:%M') %> <strong>sharp</strong><%="👌".html_safe %></p>
-    <p><strong>Duration:</strong> <%= rand(1..5) %> hours per day</p>
+    <p><strong>Duration:</strong> <%=mission.duration = rand(1..5) %> hours per day</p>
     <p><strong>Dess code:</strong> <%= mission.dess_code %></p>
     <p><strong>Reward:</strong> <%= mission.reward %> points</p>
     <p><strong>Rating:</strong> <%= mission.rating %></p>
