creation de mission et seed avec photos OK

--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -7,7 +7,7 @@
 <% @missions.each do |mission| %>
   <div class="mission">
 
-    <%= mission.photo_url%>
+    <%= image_tag mission.photo_url %>
 
     <h3><%= mission.title %></h3>
     <p><%= mission.description %></p>
