--- a/app/views/missions/new.html.erb
+++ b/app/views/missions/new.html.erb
@@ -25,7 +25,7 @@
               </label>
               <div class="clear"> </div>
             </div>
-            <%= f.submit "Create mission" %>
+            <%= link_to "Create mission ", profile_path%> 
     <% end %>
       </div>
 
