--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -2,7 +2,7 @@
 
                     <div class="card-block px-2">
                       <h4 class="card-title mt-3"><%= @mission.title %></h4>
-                      <p class="card-text"> What's your mission ?<%= @mission.description %></p>
+                      <p class="card-text"> What's your mission will be ?<%= @mission.description %></p>
                       <p class="card-text">Your dress code<%= @mission.dess_code %></p>
                       <p class="card-text"><%= @mission.duration %>hours</p>
                       <% if mission.photo_url.present? %>
