work on profile in progress

--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -7,6 +7,7 @@
 <p>Location: <%= @mission.location %></p>
 <p>Reward: <%= @mission.reward %> points</p>
   <p><% if current_user == @mission.user  %>
+    <%= link_to "Book this bunker", new_mission_booking_path(@mission)%>
     <%= link_to "Edit you posted mission", edit_mission_path(@mission.id),class: "btn"  %>
     <%= link_to "Delete your mission", mission_path(@mission), method: :delete, data: { confirm: "Are you sure?" } %>
     <%# <%= link_to "Dashboard", profil_path, data: {turbo_method: :get}, class: "btn" %>
