--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -25,4 +25,4 @@
   </div>
 <% end %>
 
-  <%= link_to "CHECK THE MISSION", mission_path(mission) %>
+  <%# <%= link_to "CHECK THE MISSION", mission_path(mission) %> %>
