--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -9,7 +9,7 @@
   border-top: solid green;
   width: 100%;
   margin-bottom: 0;
-  position: fixed;
+  position: sticky;
 }
 
 .footer a {
@@ -21,4 +21,18 @@
 .footer i {
   font-size: 24px;
   color: #333;
+}
+
+.calendar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #EEF4ED;
+  height: 60px;
+  bottom: 0;
+  padding: 0 20px;
+  border-top: solid green;
+  width: 100%;
+  margin-bottom: 0;
+  position: fixed;
 }
