--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,8 @@
   <body><%= render "shared/navbar" %>
     <%= render "shared/flashes" %>
     <%= yield %>
-    <%= render "shared/footer" %>
+    <%= render "shared/footer" %> <% unless  ( controller_name == "pages" && action_name == "calendar") || ( controller_name == "pages" && action_name == "profile") %>
+
+    <% end %>
   </body>
 </html>
