--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -1,4 +1,12 @@
-<div class="footer">
+<h1>Your Calendar</h1>
+
+
+
+
+
+
+
+<div class="footer calendar">
   <%= link_to missions_path do %>
     <i class="fas fa-home"></i>
   <% end %>
