--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,7 +1,7 @@
 <h1> Hello it's le profile !</h1>
 
 
-<%= @missions.title %>
+<%= @mission.title %>
 <br>
 <%= @mission.photo_url %>
 <%= @mission.description %>
