--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -10,3 +10,21 @@
 
 <% end %>
 
+
+<div class="footer calendar">
+  <%= link_to missions_path do %>
+    <i class="fas fa-home"></i>
+  <% end %>
+
+  <%= link_to calendar_path do %>
+    <i class="fa-solid fa-calendar"></i>
+  <% end %>
+
+  <%= link_to missions_path do %>
+    <i class="fa-solid fa-wallet"></i>
+  <% end %>
+
+  <%= link_to profile_path do %>
+    <i class="fas fa-user"></i>
+  <% end %>
+</div>
