--- a/app/views/missions/new.html.erb
+++ b/app/views/missions/new.html.erb
@@ -25,7 +25,8 @@
               </label>
               <div class="clear"> </div>
             </div>
-            <%= link_to "Create mission ", profile_path%> 
+            <br>
+            <%= link_to "Create mission", profile_path, class: "link-to-create"%>
     <% end %>
       </div>
 
