--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -16,7 +16,7 @@
     <i class="fas fa-home"></i>
   <% end %>
 
-  <%= link_to calendar_path do %>
+  <%= link_to calendars_path do %>
     <i class="fa-solid fa-calendar"></i>
   <% end %>
 
