--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -26,5 +26,4 @@
 <% end %>
 
 
-  <%# <%= link_to "CHECK THE MISSION", mission_path(mission) %> %>
-
+  <%# <%= link_to "CHECK THE MISSION", mission_path(mission) %>
