mapbox sur index

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -6,3 +6,4 @@
 
                 <div class="form-actions text-center">
                   <%= f.submit "Submit booking ", class: "btn btn primary" %>
+<% end %>
