--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,8 @@
 // External libraries
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome";
+// @import "leaflet";
+// leaflet pour , enc om for now car marche pas
 
 // Your CSS partials
 @import "components/index";
