--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -5,4 +5,9 @@
             <%= f.date_field :end_date%>
 
                 <div class="form-actions text-center">
-                  <%= f.submit "Submit booking ", class: "btn btn primary" %>
+
+                <%= link_to "Book your mission ", profile_path%>
+         <% end %>
+                </div>
+
+      <%= link_to "< Back to missions", missions_path, class: "btn btn primary"%>
