--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,8 +1,13 @@
 <h2 class = "text-center fw-1 fs-1 m-5">Welcome ! Time To Book Your Mission </h2>
 
           <%= simple_form_for [@mission, @booking] do |f| %>
-            <%= f.date_field :start_date %>
-            <%= f.date_field :end_date%>
+            <% if @mission.end_date.mjd - @mission.start_date.mjd > 1 %>
+              <%= f.date_field :start_date %>
+              <%= f.date_field :end_date%>
+            <% else %>
+              <%= start_date.mission %>
+            <% end %>
+
 
                 <div class="form-actions text-center">
 
