--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,7 +5,7 @@
 @import "navbar";
 @import "form";
 @import "footer";
-
+@import "calendar";
 
 
 .card-bunker {
@@ -99,6 +99,3 @@
     width: 100%;
     height: 307px;
   }
-
-@import "calendar"
-
