--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -15,7 +15,7 @@
 
   <%= f.label :accept do %>
     <span class= "btn btn success">
-       <%= link_to 'Accept', new_mission_booking_path(@mission) %>
+       <%= link_to 'Accept', new_mission_booking_path(@booking) %>
     </span>
 
   <% end %>
