--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,8 +1,5 @@
 <% if user_signed_in? %>
-
-  <h1 class="text-center mt-3 mb-5"> Your Dashboard !</h1>
-
-
+  <br>
   <br>
   <div class="container mt-5">
       <div class="card">
@@ -13,20 +10,36 @@
       </div>
       <br>
       <div class="green-line"></div>
-
-      <% @missions.each do |mission| %>
       <br>
-      <%=  mission.title %>
-      <%=  mission.photo_url %>
-      <%=  mission.description %>
-      <%=  mission.start_date %>
-      <%=  mission.end_date %>
-
-      <% end %>
 
     <div class="container-booking">
         <div class="header-profile">
-          <h1>Bookings Dashboard</h1>
+          <h1>Booking Dashboard</h1>
+        </div>
+        <div class="bookings">
+        <% current_user.bookings.last.mission.accept %>
+          <% @bookings.each do |booking, mission| %>
+            <div class="booking-list">
+              <div class="booking">
+                <div class="booking-info">
+                  <div class="booking-time"><%= booking.mission.title %></div>
+                  <div class="booking-time"><%= booking.mission.photo_url %></div>
+                  <div class="booking-time"><%= booking.mission.description %></div>
+                  <div class="booking-time"><%= booking.mission.start_date %></div>
+                  <div class="booking-time"><%= booking.mission.end_daten %></div>
+                </div>
+                <div class="booking-status">Confirmed</div>
+              </div>
+            </div>
+          <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-booking">
+        <div class="header-profile">
+          <h1>Creation Dashboard</h1>
         </div>
         <div class="bookings">
           <% @missions.each do |mission| %>
@@ -50,7 +63,7 @@
 
 
   </div>
-
+  <br>
   <div class="footer">
     <%= link_to missions_path do %>
       <i class="fas fa-home"></i>
@@ -71,4 +84,4 @@
     <% end %>
   </div>
 
-<%# <% end %>
+<% end %>
