--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -13,31 +13,21 @@
 
 <p><% if current_user != @mission.user  %>
 
-
     <%= simple_form_for [@mission, @booking] do |f| %>
     <p> Feel Free To accept your mission !</p>
      <%# <%= f.check_box :accept, required: true %>
-     <%= f.submit "Accept" %>
-
-      <%= f.label :accept do %>
-        <span class= "btn btn-success">
-           <%= link_to 'Accept',  new_mission_booking_path(@mission) %>
-           <%# ajouter une confirmation %>
-        </span>
-
-      <% end %>
-
+     <%= f.submit "Accept", class: "btn btn-success" %>
     <% end %>
 
     <%= simple_form_for [@mission, @declined_booking] do |f| %>
-    <p> Feel Free To accept your mission !</p>
-     <%# <%= f.check_box :accept, required: true %>
-     <%= f.submit "Decline" %>
 
-
+     <%= f.submit "Decline", class: "btn btn-warning"%>
     <% end %>
 
 <% end %>
+
+
+   
 
 
   <p><% if current_user == @mission.user  %>
