--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -47,7 +47,7 @@
   }
 
   .index-bg {
-    background-image: url('tree.jpg');
+    background-image: url('etoile.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
