--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -54,6 +54,8 @@
   align-items: center;
   padding: 10px;
   border-bottom: 1px solid #ccc;
+  width: 100%;
+    overflow: scroll;
 }
 
 .booking-info {
