--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -5,8 +5,8 @@
       <div class="card">
         <div class="card-body text-center background-card-profile">
           <%# <%= current_user.first_name.capitalize %>
-          <%# <%= current_user.last_name.capitalize %> 
-          - <%= current_user.email.capitalize %>
+          <%# <%= current_user.last_name.capitalize %>
+          <%= current_user.email.capitalize %>
         </div>
       </div>
       <br>
@@ -18,7 +18,7 @@
           <h1>Booking Dashboard</h1>
         </div>
         <div class="bookings">
-        <% current_user.bookings.last.mission.accept %>
+        <%# <% current_user.bookings.last.mission.accept %>
           <% @bookings.each do |booking, mission| %>
             <div class="booking-list">
               <div class="booking">
@@ -27,9 +27,10 @@
                   <div class="booking-time"><%= booking.mission.photo_url %></div>
                   <div class="booking-time"><%= booking.mission.description %></div>
                   <div class="booking-time"><%= booking.mission.start_date %></div>
-                  <div class="booking-time"><%= booking.mission.end_daten %></div>
+                  <div class="booking-time"><%= booking.mission.end_date %></div>
+                  <div class="booking-status">Confirmed</div>
                 </div>
-                <div class="booking-status">Confirmed</div>
+
               </div>
             </div>
           <% end %>
@@ -60,18 +61,7 @@
       </div>
     </div>
 
-    <%= current_user.bookings.last.mission.accept  %>
 
-
- <% @bookings.each do |booking, mission| %>
-      <br>
-      <%= booking.mission.title %>
-      <%= booking.mission.photo_url %>
-      <%= booking.mission.description %>
-      <%= booking.mission.start_date %>
-      <%= booking.mission.end_date %>
-
-  <% end %>
 
   </div>
   <br>
@@ -97,4 +87,3 @@
 
 
  <% end %>
-
