--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -1,7 +1,23 @@
 <div class="index-bg">
-    <h1> <strong> Earth care </strong> </h1>
-    <p>The More You Care The More You Win.</p>
-  <h1 class="text-center text-white">Missions</h1>
+
+
+<div class="container">
+
+    <p>
+
+      <span>
+        The More You Care The More You Win
+      </span>
+
+    </p>
+
+    <p>
+      <span>
+        Earth Care
+      </span>
+    </p>
+</div>
+
    <div class="container">
       <p class="titre-homepage text-center mt-4 w-100 p-3 text-white">Hello to all concerned and conscious people!</p>
       <div class="row row-cols-1 row-cols-md-3">
