--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -9,13 +9,15 @@
           <%= current_user.email.capitalize %>
         </div>
       </div>
+
       <br>
       <div class="green-line"></div>
       <br>
 
+
     <div class="container-booking">
         <div class="header-profile">
-          <h1>Booking Dashboard</h1>
+          <h1>My Bookings</h1>
         </div>
         <div class="bookings">
         <%# <% current_user.bookings.last.mission.accept %>
@@ -23,12 +25,13 @@
             <div class="booking-list">
               <div class="booking">
                 <div class="booking-info">
+                  <div class="booking-time"><%= image_tag booking.mission.photo_url, class: "img-booking"%></div>
                   <div class="booking-time"><%= booking.mission.title %></div>
-                  <div class="booking-time"><%= booking.mission.photo_url %></div>
-                  <div class="booking-time"><%= booking.mission.description %></div>
                   <div class="booking-time"><%= booking.mission.start_date %></div>
                   <div class="booking-time"><%= booking.mission.end_date %></div>
                   <div class="booking-status">Confirmed</div>
+                  <%# <div class="booking-time"><%= booking.mission.description.truncate(20, omission: '...').html_safe %>
+
                 </div>
 
               </div>
@@ -38,6 +41,7 @@
         </div>
       </div>
     </div>
+    <br>
 
     <div class="container-booking">
         <div class="header-profile">
