ajout section message dans footer

--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -69,19 +69,22 @@
 
   </div>
   <br>
+  
   <div class="footer">
     <%= link_to missions_path do %>
       <i class="fas fa-home"></i>
     <% end %>
 
-
     <%= link_to calendars_path do %>
       <i class="fa-solid fa-calendar"></i>
     <% end %>
 
-
     <%= link_to missions_path do %>
       <i class="fa-solid fa-wallet"></i>
+    <% end %>
+
+    <%= link_to missions_path do %>
+      <i class="fa-solid fa-comments"></i>
     <% end %>
 
     <%= link_to profile_path do %>
