--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -11,6 +11,10 @@
     <i class="fa-solid fa-wallet"></i>
   <% end %>
 
+  <%= link_to missions_path do %>
+    <i class="fa-solid fa-comments"></i>
+  <% end %>
+
   <%= link_to profile_path do %>
     <i class="fas fa-user"></i>
   <% end %>
