show index transparence

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,11 +1,12 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background-color: #EEF4ED;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   z-index: 999;
+  height: 60px; 
 }
 
 .navbar-lewagon .navbar-collapse {
