--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -57,3 +57,24 @@
   .col-md-4.mb-4 {
     margin-bottom: 20px;
   }
+
+  .card {
+    background-color: rgba(255, 255, 255, 0.8); /* Ajouter de la transparence */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Ajouter une ombre légère pour plus de profondeur */
+    border-radius: 10px;
+
+  }
+
+  .card-img-top {
+    background-color: rgba(255, 255, 255, 0.8); /* Ajouter de la transparence */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+
+  }
+
+  .list-group-item {
+    background-color: rgba(255, 255, 255, 0.8); /* Ajouter de la transparence */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+
+  }
