--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,5 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon mb-">
   <div class="container-fluid">
     <%= link_to missions_path, class: "navbar-brand" do %>
       <%= image_tag "https://c8.alamy.com/comp/JHWYKD/save-the-earth-earth-day-concept-logo-design-template-hands-hold-earth-JHWYKD.jpg" %>
@@ -7,6 +8,7 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
