--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,11 @@
 
 
 
-body a {
-  text-decoration: none;
-  color: black;
-}
+// body a {
+//   text-decoration: none;
+//   color: black;
+// }
+
+
+
+
