--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -15,36 +15,36 @@
 }
 
 body {
-  font-family: Monserrat, Helveticat;
-  background: url("Banner.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 50vh;
+  font-family: Monserrat;
+  // background: url("Banner.png");
+  // background-position: center;
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  height: 100vh;
 }
 
-.container{
+.container1{
   max-width: 1400px;
   margin: 100 auto 0;
   padding: 100px 20px 0;
 }
 
 
-p{
+h3{
   font-weight: bolder;
   text-transform: uppercase;
-  color:#222;
+  color:#eadddd;
   color: transparent;
-  font-size: 0px;;
+  font-size: 50px;;
 }
-p span {
+h3 span {
   display:inline-block;
   position: relative;
   overflow: hidden;
   font-size: clamp(20px, 8vw, 100px);
 }
 
-p span::after{
+h3 span::after{
   content: "";
   display: block;
   position: absolute;
@@ -53,31 +53,75 @@ p span::after{
   top: 0;
   left: 0;
   transform: translateX(-100%);
-
-
 }
 
-p:nth-child(1) {
-  font-weight: 300;
+h3:nth-child(1) {
+  font-weight: 200;
   animation: txt-appearance 0s 1s
   forwards;
 }
 
-p:nth-child(2) {
-  animation: txt-appearance 0s 1.50s
-  forwards;
-}
+// h3:nth-child(2) {
+//   animation: txt-appearance 0s 1.50s
+//   forwards;
+// }
 
-p:nth-child(1) span::after{
-  background: green;
+h3:nth-child(1) span::after{
+  background: rgb(215, 179, 95);
   animation: slide-in 0.75s ease-out forwards,
   slide-out 0.75s ease-out forwards;
 }
 
-p:nth-child(2) span::after{
+// h3:nth-child(2) span::after{
+//   background: royalblue;
+//   animation: slide-in 0.75s 0.3s ease-out forwards,
+//   slide-out 0.75s 2s ease-out forwards;
+
+// }
+
+
+
+
+
+
+h1{
+  font-weight: bolder;
+  font-family: Monserrat, Arial, Helvetica, sans-serif;
+  text-transform: uppercase;
+  color:#b4a5a5;
+  color: transparent;
+  font-size: 15px;
+}
+h1 span {
+  display:inline-block;
+  position: relative;
+  overflow: hidden;
+  font-size: clamp(20px, 8vw, 50px);
+}
+
+h1 span::after{
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  transform: translateX(-100%);
+}
+
+
+
+h1:nth-child(2) {
+  animation: txt-appearance 0s 1.50s
+  forwards;
+}
+
+
+h1:nth-child(2) span::after{
   background: royalblue;
   animation: slide-in 0.75s 0.3s ease-out forwards,
-  slide-out 0.75s 1.3s ease-out forwards;
+  slide-out 0.75s 2s ease-out forwards;
 
 }
 
@@ -98,6 +142,100 @@ p:nth-child(2) span::after{
    color: whitesmoke;
   }
 }
+
+
+
+
+// *, ::before, ::after {
+//   box-sizing: border-box;
+//   margin: 0;
+//   padding: 0;
+// }
+
+// body {
+//   font-family: Arial, Helvetica, sans-serif;
+//   height: 100vh;
+// }
+
+
+// .accueil h1 {
+//   font-size: 120px;
+//   margin-bottom: 450px;
+//   text-align: center;
+// }
+
+// /* loader */
+
+// .loader {
+//   position: absolute;
+//   width: 100%;
+//   height: 50%;
+//   background: #020645;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
+// .lettre {
+//   color: #484848;
+//   font-size: 80px;
+//   letter-spacing: 15px;
+
+//   margin-top: 50px;
+//   animation: flash 1.2s linear infinite;
+// }
+// @keyframes flash {
+//   0% {
+//       color: #00ff80;
+//       text-shadow: 0 0 7px #2600ff;
+//   }
+//   90% {
+//       color: #484848;
+//       text-shadow: none;
+//   }
+//   100% {
+//       color: #2600ff;
+//       text-shadow: 0 0 7px #2600ff;
+//   }
+// }
+
+// .lettre:nth-child(1){
+//   animation-delay: 0.1s;
+// }
+// .lettre:nth-child(2){
+//   animation-delay: 0.2s;
+// }
+// .lettre:nth-child(3){
+//   animation-delay: 0.3s;
+// }
+// .lettre:nth-child(4){
+//   animation-delay: 0.4s;
+// }
+// .lettre:nth-child(5){
+//   animation-delay: 0.5s;
+// }
+// .lettre:nth-child(6){
+//   animation-delay: 0.6s;
+// }
+// .lettre:nth-child(7){
+//   animation-delay: 0.7s;
+// }
+// .lettre:nth-child(8){
+//   animation-delay: 0.8s;
+// }
+// .lettre:nth-child(9){
+//   animation-delay: 0.9s;
+// }
+// .lettre:nth-child(10){
+//   animation-delay: 1s;
+// }
+
+// .fondu-out {
+//   opacity: 0;
+//   transition: opacity 0.4s ease-out;
+// }
+
+
+
 
 
 
