--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -1,25 +1,56 @@
+
+
+
 <div class="index-bg">
 
 
-<div class="container">
+   <%# <h1> <strong> Earth care </strong> </h1>
+    <p>The More You Care The More You Win.</p>
+  <h1 class="text-center text-white">Missions</h1> %>
 
-    <p>
 
-      <span>
-        The More You Care The More You Win
-      </span>
-
-    </p>
-
-    <p>
+<div class="container1">
+    <h3>
       <span>
         Earth Care
       </span>
-    </p>
+    </h3>
+
+    <h1>
+
+      <span>
+        The More You Care The More You Earn !
+      </span>
+
+    </h1>
+
+
 </div>
 
+    <%# <div class="loader">
+        <span class="lettre">E</span>
+        <span class="lettre">A</span>
+        <span class="lettre">R</span>
+        <span class="lettre">T</span>
+        <span class="lettre">H</span>
+        <span class="lettre"></span>
+        <span class="lettre">C</span>
+        <span class="lettre">A</span>
+        <span class="lettre">R</span>
+        <span class="lettre">E</span>
+
+
+    </div>
+
+    <div class="accueil">
+        <h1> !</h1>
+    </div>
+
+
+    <script src="app.js"></script> %>
+
    <div class="container">
-      <p class="titre-homepage text-center mt-4 w-100 p-3 text-white">Hello to all concerned and conscious people!</p>
+      <h2 class="titre-homepage text-center  w-100 p-3 text-white">Hello to all concerned and conscious people!</h2>
       <div class="row row-cols-1 row-cols-md-3">
          <% @missions.each do |mission| %>
             <div class="col-md-4 mb-4">
