--- a/app/views/missions/new.html.erb
+++ b/app/views/missions/new.html.erb
@@ -1,7 +1,7 @@
 <body class="body-form">
 	<!-- main -->
 
-<% if user.user_signed_in? %>
+<% if user_signed_in? %>
 	<div class="main-w3layouts wrapper">
 		<h1 class="title-form">NEW MISSION</h1>
     <%= simple_form_for(@mission) do |f| %>
@@ -54,6 +54,6 @@
 		</ul>
 	</div>
 	<!-- //main -->
-  
+
 <% end %>
 </body-form>
