--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -7,7 +7,7 @@
 
           <%= current_user.first_name.capitalize%>
           <%= current_user.last_name.capitalize%>
-          -<%= current_user.email.capitalize %>
+          <%= current_user.email %>
 
         </div>
       </div>
@@ -58,10 +58,10 @@
               <div class="booking">
                 <div class="booking-info">
                   <div class="booking-time"><%= mission.title %></div>
-                  <div class="booking-time"><%= mission.start_time.strftime('%H:%M') %></div>
+                  <div class="booking-time"><%= mission.duration.strftime('%H:%M') %></div>
                   <div class="booking-location"><%= mission.location %></div>
                 </div>
-                <div class="booking-status">Confirmed</div>
+                <div class="booking-status">Created</div>
               </div>
             </div>
           <% end %>
