--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -12,6 +12,14 @@
         </div>
       </div>
 
+
+ <%# les points debloqués lors du booking %>
+     <p>Your wallet is unlocked</p>
+      <% @vouchers.each do |voucher, booking| %>
+        <%= voucher.booking.mission.reward %>
+      <% end %>
+
+
       <br>
       <div class="green-line"></div>
       <br>
@@ -47,6 +55,12 @@
       </div>
     </div>
     <br>
+
+
+
+
+
+
 
     <div class="container-booking">
         <div class="header-profile">
