--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -10,6 +10,11 @@
 
 }
 
+.titre-calendar {
+  color: black;
+  margin-top: 7px;
+}
+
 .meeting {
   color: white;
   padding: 8px 24px;
@@ -28,6 +33,7 @@ table {
 }
 
 .table-striped {
+
   td {
     width: 100px;
   }
