--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -51,6 +51,7 @@
 
 .img-booking {
   border-radius: 5px;
+  width: 100%;
 }
 
 .booking {
@@ -60,7 +61,7 @@
   padding: 10px;
   border-bottom: 1px solid #ccc;
   width: 100%;
-    overflow: scroll;
+    // overflow: scroll;
   border: 1px solid #90BE6D;
 }
 
